# agentic-trading-ml-flow

./: .env.example  .gitignore  README.md  pyproject.toml
configs/: agent_loop.toml  bnr.toml  evidence_boundary.toml  global.toml  price_action_feature_catalog.toml  research_program.toml  skills.toml
experiments/: registry.jsonl
reports/: bnr_context_linear_t060_v1_confirmation.json  bnr_context_linear_t060_v1_event_feature_cycle.json  bnr_context_linear_t060_v1_event_threshold_sweep.json  bnr_context_reclaim_linear_t045_v1_confirmation.json  bnr_context_reclaim_linear_t045_v1_event_threshold_sweep.json  break_quality_gate_cycle.json  candidate_universe_expansion.json  candidate_universe_labeling_diagnostic.json  cpcv_failure_attribution.json  cross_model_analysis.json  exit_behavior_research_market_state_v1.json  exit_behavior_structure_partial_replay_market_state_v1.json  exit_engine_market_state_v1.json  exit_engine_scratch_refinement_market_state_v1.json  exploration_benchmark_diagnostics.json  feature_threshold_cycle_large_summary.json  label_policy_cycle_large_summary.json  label_threshold_matrix.json  langgraph_subtype_batch_summary.json  large_sample_failure_map.json  market_state_setup_quality_v1_ml4t_backtest.json  market_state_setup_quality_v1_ml4t_backtest_exploration.json  market_state_setup_quality_v1_ml4t_backtest_validation.json  market_state_setup_quality_v1_validation.json  model_cycle_large_summary.json  policy_feature_cycle.json  provisional_challenger_confirmation.json  reclaim_meta_filter_cycle.json  regime_feature_cycle.json  subtype_cycle.json  (+4 more)
(+237 files in other folders)
