[project]
name = "trading-ml-v4"
version = "0.1.0"
description = "BNR 1m trading ML substrate and research pipeline."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ml4t-backtest>=0.1.0b20",
    "ml4t-diagnostic>=0.1.0b21",
    "ml4t-engineer>=0.1.0b8",
    "numpy>=2.0.0",
    "numbers-parser>=4.18.0",
    "pandas>=2.2.0",
    "polars>=1.22.0",
    "pyarrow>=16.0.0",
    "scikit-learn>=1.5.0",
]

[project.optional-dependencies]
agents = [
    "langgraph>=1.0.0",
    "langchain>=1.0.0",
    "deepagents>=0.5.3",
    "langchain-openai>=1.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
